gccida/c1/count_error
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_error/src/diagnostic.c:1399:8: error: use of undeclared identifier 'count_error_warning_message'
if ( ( count_error_warning_message & 1) == 0 ) 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_error/src/diagnostic.c:1402:1: error: use of undeclared identifier 'count_error_warning_message'
count_error_warning_message = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_error/src/obj/diagnostic.o] Error 1
